// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`the html structure of a Card with a single document 1`] = `
.emotion-0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

.emotion-1 {
  z-index: 1;
  opacity: 1;
}

.emotion-1:hover {
  cursor: pointer;
}

<div
  class="mpccard mpccard-hover card"
>
  <div
    class="pb-0 text-center card-header"
  >
    <p
      class="mpccard-slot"
    >
      Slot 1
    </p>
  </div>
  <div>
    <div
      class="rounded-lg shadow-lg ratio ratio-7x5 emotion-0"
    >
      <img
        alt="Card 1"
        class="card-img card-img-fade-in emotion-1"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src=""
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
    </div>
    <div
      class="mb-0 text-center card-body"
    >
      <div
        class="mpccard-name card-subtitle h6"
      >
        Card 1
      </div>
      <div
        class="mpccard-spacing"
      >
        <p
          class="mpccard-source card-text"
        >
          Source 1 [1200 DPI]
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`the html structure of a Card with no search results 1`] = `
.emotion-0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

<div
  class="mpccard mpccard-hover card"
>
  <div
    class="pb-0 text-center card-header"
  >
    <p
      class="mpccard-slot"
    >
      Slot 1
    </p>
  </div>
  <div>
    <div
      class="rounded-lg shadow-lg ratio ratio-7x5 emotion-0"
    >
      <img
        alt="Card not found"
        class="card-img card-img-fade-in"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="100vw"
        src="/_next/image?url=%2Fblank.png&w=3840&q=75"
        srcset="/_next/image?url=%2Fblank.png&w=640&q=75 640w, /_next/image?url=%2Fblank.png&w=750&q=75 750w, /_next/image?url=%2Fblank.png&w=828&q=75 828w, /_next/image?url=%2Fblank.png&w=1080&q=75 1080w, /_next/image?url=%2Fblank.png&w=1200&q=75 1200w, /_next/image?url=%2Fblank.png&w=1920&q=75 1920w, /_next/image?url=%2Fblank.png&w=2048&q=75 2048w, /_next/image?url=%2Fblank.png&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent; z-index: 1;"
      />
    </div>
    <div
      class="mb-0 text-center card-body"
    >
      <div
        class="mpccard-name card-subtitle h6"
      >
        My Invalid Query
      </div>
      <div
        class="mpccard-spacing"
      >
        <p
          class="mpccard-source card-text"
        >
          Your search query
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`the html structure of a Card with three documents 1`] = `
.emotion-0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

.emotion-1 {
  z-index: 1;
  opacity: 1;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-2 {
  z-index: 0;
  opacity: 0;
}

<div
  class="mpccard mpccard-hover card"
>
  <div
    class="pb-0 text-center card-header"
  >
    <p
      class="mpccard-slot"
    >
      Slot 3
    </p>
  </div>
  <div>
    <div
      class="rounded-lg shadow-lg ratio ratio-7x5 emotion-0"
    >
      <img
        alt="Card 1"
        class="card-img card-img-fade-in emotion-1"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src=""
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <img
        alt="Card 2"
        class="card-img emotion-2"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src=""
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <img
        alt="Card 3"
        class="card-img emotion-2"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src=""
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
    </div>
    <div
      class="mb-0 text-center card-body"
    >
      <div
        class="mpccard-name card-subtitle h6"
      >
        Card 1
      </div>
      <div
        class="mpccard-spacing"
      >
        <p
          class="mpccard-source card-text"
        >
          Source 1 [1200 DPI]
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`the html structure of a Card with two documents 1`] = `
.emotion-0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

.emotion-1 {
  z-index: 1;
  opacity: 1;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-2 {
  z-index: 0;
  opacity: 0;
}

<div
  class="mpccard mpccard-hover card"
>
  <div
    class="pb-0 text-center card-header"
  >
    <p
      class="mpccard-slot"
    >
      Slot 2
    </p>
  </div>
  <div>
    <div
      class="rounded-lg shadow-lg ratio ratio-7x5 emotion-0"
    >
      <img
        alt="Card 1"
        class="card-img card-img-fade-in emotion-1"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src=""
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <img
        alt="Card 2"
        class="card-img emotion-2"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        src=""
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
    </div>
    <div
      class="mb-0 text-center card-body"
    >
      <div
        class="mpccard-name card-subtitle h6"
      >
        Card 1
      </div>
      <div
        class="mpccard-spacing"
      >
        <p
          class="mpccard-source card-text"
        >
          Source 1 [1200 DPI]
        </p>
      </div>
    </div>
  </div>
</div>
`;
